deployment/manifest-rolling-flask/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
  labels:
    app: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app-container
          image: dockerelvis/python-memcached:${VERSION}
          ports:
            - containerPort: 8095
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /
              port: 8095
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8095
            initialDelaySeconds: 15
            periodSeconds: 20
      terminationGracePeriodSeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 8096  # Port exposed by the Service
      targetPort: 8095 # Port on the Pod
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: flask-app-ingress
 labels:
   app: flask-app
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
   - host: ubuntumachine.com
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: flask-app-service
               port:
                 number: 8096


# export VERSION="1.0.0"
# envsubst < deployment.yaml | kubectl apply -f -
